# Synapse

./: .ai-devkit.json  .git_diff_output.txt  .git_status_output.txt  .gitignore  CROSS-PAGE_DISCREPANCY_MAP.md  bash.exe.stackdump  dev.sh  implementation_plan.md  package-lock.json  pnpm-lock.yaml  reset_resources.sql  task.md  verify_services_module.py  walkthrough.md
backend/: .env  .env.example  check_db.py  conftest.py  experiment_bias.txt  experiment_final.txt  experiment_perf.txt  experiment_result.txt  experiment_varied.txt  migration_error.txt  migration_error_2.txt  migration_promotions.sql  migration_treatment_notes.sql  migration_waitlist.sql  migration_warranty.sql  pyproject.toml  pytest.ini  requirements.txt  run_migration.py  service_methods_append.py  test_output.txt  test_resource_occupancy.py  treatment_note_temp.py
backend/alembic/: env.py
backend/alembic/versions/: 1154b080905b_change_services_timestamps_to_.py  1d1d0e43c8fc_add_manager_role_standardization.py  563448cd010a_update_handle_new_user_trigger.py  5f35f45158c7_refactor_database_v2_2.py  70252cff6d08_explicit_timestamptz_for_services.py  77c11fbbf9a0_manual_staff_fix.py  7e40273d288a_add_resource_occupancy.py  9dacc5921c70_add_cascade_delete_to_service_skills.py  9e38b40ec2b8_add_users_table_and_trigger.py  b0170ba327bc_fix_decimal_fields_billing_promotions_.py  b9df64f282fd_add_billing_module_tables.py  bb752c48cecd_add_customers_table.py  d3ab1cef886b_add_services_module.py  e2bb40c3dcee_add_user_profile_fields.py  (+2 more)
backend/database/: README.md  schema.sql
backend/src/app/: config.py  (+3 more)
(+1346 files in other folders)
