[project]
name = "synapse-backend"
version = "0.1.0"
description = "Backend for Synapse CRM"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "supabase>=2.0.0",
    "pyjwt>=2.8.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
